# autoresearch-cockpit

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  install.ps1  install.sh  run.bat  run.sh  setup.bat  setup.sh
backend/: .gitignore  Dockerfile  alembic.ini  autoresearch-cockpit.spec  migrate_pg_to_sqlite.py  pyproject.toml  server.py
backend/alembic/: env.py
backend/alembic/versions/: 057faecfdd86_initial_schema.py  a1b2c3d4e5f6_add_iteration_limits_to_runs.py  b6ce246eb3c7_add_auto_approve_auto_continue_to_runs.py  c3a8f7e12d01_add_best_to_projects.py  d4e5f6a7b8c9_add_restart_fields.py  d5e6f7a8b9c0_add_delivered_at_to_run_notes.py  e5f6a7b8c9d0_add_overfit_floor_to_runs.py  f6a7b8c9d0e1_add_overfit_margin_to_runs.py  g7b8c9d0e1f2_add_best_provenance_to_projects.py  h8c9d0e1f2a3_add_default_run_settings_to_projects.py  i9d0e1f2a3b4_add_on_delete_cascade_to_fks.py  j0e1f2a3b4c5_add_context_compaction_to_runs.py  k1f2a3b4c5d6_add_default_compaction_settings_to_projects.py  l2a3b4c5d6e7_add_compacting_to_runs.py  l2g3h4i5j6k7_add_notification_channels.py  m3h4i5j6k7l8_add_error_message_to_runs.py  n4i5j6k7l8m9_add_machine_info_to_runs.py  o5j6k7l8m9n0_add_include_machine_info.py  p6k7l8m9n0o1_update_compact_threshold_default.py  q7l8m9n0o1p2_add_max_consecutive_failures.py
backend/app/: config.py  db.py  main.py  schemas.py
backend/app/api/: channels.py  notes.py  projects.py  providers.py  runs.py  settings.py  sse.py
backend/app/channels/: __init__.py  base.py  discord_channel.py  registry.py  slack_channel.py  telegram_channel.py  webhook_channel.py
backend/app/models/: __init__.py  base.py  channel.py  project.py  provider.py  run.py  state_machine.py
backend/app/providers/: anthropic_provider.py  base.py  copilot_provider.py  google_provider.py  ollama_provider.py  openai_provider.py  openrouter_provider.py  registry.py
backend/app/services/: channel_manager.py  command_handler.py  compaction.py  encryption.py  event_bus.py  git_service.py  machine_info.py  model_cache.py  notification_service.py  patch_validator.py  prompt_builder.py  recovery.py  run_engine.py
backend/tests/: test_git_service.py  test_patch_validator.py  test_providers.py  test_state_machine.py
frontend/: Dockerfile  (+3 more)
(+55 files in other folders)
